# telegram-logger

./: .env.example  .flake8  .gitignore  002-数据模型重构.md  Dockerfile  README.md  app.py  config.py.example  conventions.md  docker-compose.yml  file_encrypt.py  hello.py  main.py  migreation.md  pyproject.toml  tg_delete_logger.py
.github/workflows/: docker.yml
.rules/: conventions.md  project_rules.md  rules.md
IMP/: 001-RFC003-UserBot.md
RFC/: 002-数据模型重构.md  003-用户机器人设计.md
handlers/: migration.md
telegram_logger/: main.py
telegram_logger/data/: database.py  models.py
telegram_logger/handlers/: __init__.py  base_handler.py  edit_delete_handler.py  forward_handler.py  log_sender.py  media_handler.py  mention_reply.py  message_formatter.py  message_handler.py  output_handler.py  persistence_handler.py  user_bot_command.py
telegram_logger/services/: __init__.py  ai_service.py  cleanup.py  client.py  user_bot_state.py
telegram_logger/utils/: __init__.py  file_encrypt.py  logging.py  media.py  mentions.py
tests/: test.py  test_main.py
tmp/: id-issue.md  tmp.md
