[project]
name = "telegram-delete-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptg>=0.5.0.post0",
    "pyaescrypt>=6.1.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "telethon>=1.39.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "flake8-import-order>=0.18.2",
    "mypy>=1.15.0",
]
